// Copyright (c) 2025 Digital Asset (Switzerland) GmbH and/or its affiliates. All rights reserved.
// SPDX-License-Identifier: Apache-2.0

syntax = "proto3";

package com.digitalasset.canton.sequencer.admin.v30;

import "scalapb/scalapb.proto";

message BftSequencerSnapshotAdditionalInfo {
  // State transfer metadata for onboarding
  map<string, SequencerActiveAt> sequencers_active_at = 1;

  message SequencerActiveAt {
    // Onboarding topology activation timestamp (in microseconds of UTC time since Unix epoch)
    int64 timestamp = 1;
    // An epoch where the onboarding transaction became effective, used as state transfer start epoch
    optional int64 start_epoch_number = 2;
    // Needed to properly set the initial block in the Output module (due to transferring full epochs)
    optional int64 first_block_number_in_start_epoch = 3;
    // A topology query timestamp for the state transfer start epoch
    optional int64 start_epoch_topology_query_timestamp = 4;
    // Needed for emitting topology ticks consistently
    optional bool start_epoch_could_alter_ordering_topology = 5;
    // BFT time of the last block in the previous epoch (in microseconds of UTC time since Unix epoch)
    optional int64 previous_bft_time = 6;
    // A topology query timestamp for an epoch previous to the state transfer start epoch
    // Used for canonical commit set verification
    optional int64 previous_epoch_topology_query_timestamp = 7;
    // Leader Selection Policy State at the start of epoch_number
    optional bytes /*BlacklistLeaderSelectionPolicyState */ leader_selection_policy_state = 8;
  }
}

message BlacklistLeaderSelectionPolicyState {
  option (scalapb.message).companion_extends = "com.digitalasset.canton.version.AlphaProtoVersion";
  int64 epoch_number = 1;
  int64 start_block_number = 2;
  map<string, BlacklistStatus> blacklist = 3;

  message BlacklistStatus {
    oneof status {
      OnTrial on_trial = 1;
      Blacklisted blacklisted = 2;
    }

    message OnTrial {
      int64 failed_attempts_before_trial = 1;
    }

    message Blacklisted {
      int64 failed_attempts_before = 1;
      int64 epochs_left_until_new_trial = 2;
    }
  }
}
